--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Creative Writing (or "Write – Pisanie twórcze") - is an app that combines creative writing with association web (based both on research and user imput). It creates place for people interested in writing to exercise and share their stories.
+"Words of a day" are based on association web and are supposed to be prompts for writing, and they change everyday. They are supposed to help fighting so called "writing block".
+App also has mechanism to enlarge its association web based on user input.
