--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,60 +3,62 @@
 en:
   devise:
     confirmations:
-      confirmed: "Twój email został potwierdzony."
-      send_instructions: "Za moment otrzymasz emaila z dalszymi instrukcjami."
-      send_paranoid_instructions: "Jeżeli twój email istnieje w naszej bazie danych, otrzymasz wiadomosć z instrukcją jak potwierdzić rejestracje konta."
+      confirmed: "Your email address has been successfully confirmed."
+      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
+      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
-      already_authenticated: "Jesteś już zalogowany/a."
-      inactive: "Twoje konto nie jest jeszcze aktywne."
-      invalid: "Niepoprawny %{authentication_keys} lub hasło."
-      locked: "Twoje konto jest zablokowane."
-      last_attempt: "Masz jeszcze jedną próbę zanim twoje konto zostanie zablokowane."
-      not_found_in_database: "Niepoprawny %{authentication_keys} lub hasło."
-      timeout: "Twoja sesja wygasła. Zaloguj się ponownie."
-      unauthenticated: "Aby kontynuować, zaloguj lub zarejestruj się."
-      unconfirmed: "Musisz potwierdzić adres email, żeby kontynuować."
+      already_authenticated: "You are already signed in."
+      inactive: "Your account is not activated yet."
+      invalid: "Invalid %{authentication_keys} or password."
+      locked: "Your account is locked."
+      last_attempt: "You have one more attempt before your account is locked."
+      not_found_in_database: "Invalid %{authentication_keys} or password."
+      timeout: "Your session expired. Please sign in again to continue."
+      unauthenticated: "You need to sign in or sign up before continuing."
+      unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
-        subject: "Instrukcja potwierdzenia konta"
+        subject: "Confirmation instructions"
       reset_password_instructions:
-        subject: "Instrukcja resetowania konta"
+        subject: "Reset password instructions"
       unlock_instructions:
         subject: "Unlock instructions"
+      email_changed:
+        subject: "Email Changed"
       password_change:
-        subject: "Zmiana hasła"
+        subject: "Password Changed"
     omniauth_callbacks:
-      failure: "Nie udało się zautentykować %{kind} ponieważ \"%{reason}\"."
-      success: "Udało się zautentykować %{kind} konto."
+      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
+      success: "Successfully authenticated from %{kind} account."
     passwords:
-      no_token: "Sorry, zły adres. Sprawdź email jeszcze raz"
-      send_instructions: "Za moment otrzymasz e-mail z instrukcją jak zmienić hasło"
-      send_paranoid_instructions: "Jeżeli twój email istnieje w naszej bazie danych, otrzymasz wiadomosć z instrukcją jak zmienić hasło"
-      updated: "Twoje hasło zostało zmienione. Jesteś teraz zalogowany/a."
-      updated_not_active: "Twoje hasło zostało zmienione."
+      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
+      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
+      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
+      updated: "Your password has been changed successfully. You are now signed in."
+      updated_not_active: "Your password has been changed successfully."
     registrations:
-      destroyed: "Twoje konto zostało usunięte."
-      signed_up: "Witamy! Rejestracja powiodła się."
-      signed_up_but_inactive: "Rejestracja powiodła się. Potwierdź email, żeby móc się zalogować."
-      signed_up_but_locked: "Rejestracja powiodła się. Niestety twoje konto jest zablokowane."
-      signed_up_but_unconfirmed: "Wiadomość z instrukcją potwierdzena konta została wysłana na twój email."
-      update_needs_confirmation: "Wprowadziłeś zmiany, aby zostały zaakceptowane potwierdź swój email"
-      updated: "Twoje dane zostały pomyślnie zaktualizowane."
+      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
+      signed_up: "Welcome! You have signed up successfully."
+      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
+      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
+      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
+      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
+      updated: "Your account has been updated successfully."
     sessions:
-      signed_in: "Zalogowano."
-      signed_out: "Wylogowano."
-      already_signed_out: "Wylogowano."
+      signed_in: "Signed in successfully."
+      signed_out: "Signed out successfully."
+      already_signed_out: "Signed out successfully."
     unlocks:
-      send_instructions: "Za moment dostaniesz email z instrukcją jak odblokować konto."
-      send_paranoid_instructions: "Jeśli twój email instnieje, za moment dostaniesz email z instrukcją jak odblokować konto."
-      unlocked: "Odblokowano konto, zaloguj się żeby kontynuować"
+      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
+      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
+      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
   errors:
     messages:
-      already_confirmed: "już potwierdzono, spróbuj się zalogować"
-      confirmation_period_expired: "wymaga potwierdzenia do %{period}, załóż nowe"
-      expired: "wygasło, załóż nowe"
-      not_found: "nieznaleziono"
-      not_locked: "nie zablokowano"
+      already_confirmed: "was already confirmed, please try signing in"
+      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
+      expired: "has expired, please request a new one"
+      not_found: "not found"
+      not_locked: "was not locked"
       not_saved:
-        one: "1 błąd uniemożliwił zapisanie %{resource}:"
-        other: "%{count} błędy, uniemożliwiły zapisanie %{resource}:"
+        one: "1 error prohibited this %{resource} from being saved:"
+        other: "%{count} errors prohibited this %{resource} from being saved:"
